ZONG-32 continued: more tests