@@ -1,19 +1,20 @@
 package com.xenoage.zong.musiclayout.layouter.columnspacing;
 
+import static com.xenoage.utils.collections.CList.ilist;
+import static com.xenoage.utils.collections.CollectionUtils.map;
 import static com.xenoage.utils.math.Fraction.fr;
-import static com.xenoage.utils.pdlib.PMap.pmap;
-import static com.xenoage.utils.pdlib.PVector.pvec;
-import static com.xenoage.zong.core.music.util.BeatE.beate;
-import static junit.framework.Assert.assertEquals;
+import static com.xenoage.zong.core.music.util.BeatE.beatE;
+import static org.junit.Assert.assertEquals;
+
+import java.util.HashMap;
+import java.util.List;
 
 import org.junit.Test;
 
+import com.xenoage.utils.collections.IList;
 import com.xenoage.utils.kernel.Tuple2;
 import com.xenoage.utils.math.Delta;
 import com.xenoage.utils.math.Fraction;
-import com.xenoage.utils.pdlib.PMap;
-import com.xenoage.utils.pdlib.PVector;
-import com.xenoage.utils.pdlib.Vector;
 import com.xenoage.zong.core.music.VoiceElement;
 import com.xenoage.zong.core.music.clef.Clef;
 import com.xenoage.zong.core.music.clef.ClefType;
@@ -32,7 +33,6 @@ import com.xenoage.zong.musiclayout.spacing.horizontal.MeasureElementsSpacings;
 import com.xenoage.zong.musiclayout.spacing.horizontal.SpacingElement;
 import com.xenoage.zong.musiclayout.spacing.horizontal.VoiceSpacing;
 
-
 /**
  * Tests for the {@link MeasureElementsSpacingsStrategy}.
  * 
@@ -41,14 +41,13 @@ import com.xenoage.zong.musiclayout.spacing.horizontal.VoiceSpacing;
  * 
  * @author Andreas Wenger
  */
-public class MeasureElementsSpacingStrategyTest
-{
-	
+public class MeasureElementsSpacingStrategyTest {
+
 	private float paddingWidth = 1;
 	private float clefWidth = 6;
 	private LayoutSettings ls = ls();
-	
-	
+
+
 	/**
 	 * If there is enough space left for the measure elements,
 	 * the voice spacings do not have to be changed.
@@ -64,28 +63,25 @@ public class MeasureElementsSpacingStrategyTest
 	 * voice 2:    1              o
 	 * </pre>
 	 */
-	@Test public void testEnoughExistingSpace()
-	{
+	@Test public void testEnoughExistingSpace() {
 		Rest[] ve = ve();
-		PVector<VoiceSpacing> vs = pvec(
-			new VoiceSpacing(null, 1, pvec(se(ve[0], fr(1,2), 4), se(ve[1], fr(6), 15))),
-			new VoiceSpacing(null, 1, pvec(se(ve[2], fr(1), 5), se(ve[3], fr(17,2), 20))));
+		IList<VoiceSpacing> vs = ilist(
+			new VoiceSpacing(null, 1, ilist(se(ve[0], fr(1, 2), 4), se(ve[1], fr(6), 15))),
+			new VoiceSpacing(null, 1, ilist(se(ve[2], fr(1), 5), se(ve[3], fr(17, 2), 20))));
 		Clef innerClef = new Clef(ClefType.G);
-		BeatEList<Clef> innerClefs = new BeatEList<Clef>().plus(
-			beate(innerClef, fr(6)));
-		Tuple2<MeasureElementsSpacings, Vector<VoiceSpacing>> res =
-			new MeasureElementsSpacingsStrategy().compute(innerClefs,
-				new BeatEList<Key>(), null, false, vs, 0, sne(ve, innerClef), ls);
+		BeatEList<Clef> innerClefs = new BeatEList<Clef>();
+		innerClefs.add(beatE(innerClef, fr(6)));
+		Tuple2<MeasureElementsSpacings, IList<VoiceSpacing>> res = new MeasureElementsSpacingsStrategy()
+			.compute(innerClefs, new BeatEList<Key>(), null, false, vs, 0, sne(ve, innerClef), ls);
 		//clef must be at offset 15 - padding - clefwidth/2
-		Vector<SpacingElement> mes = res.get1().elements;
+		List<SpacingElement> mes = res.get1().getElements();
 		assertEquals(1, mes.size());
-		assertEquals(fr(6), mes.getFirst().beat);
-		assertEquals(15 - paddingWidth - clefWidth/2, mes.getFirst().offset, Delta.DELTA_FLOAT);
+		assertEquals(fr(6), mes.get(0).beat);
+		assertEquals(15 - paddingWidth - clefWidth / 2, mes.get(0).offset, Delta.DELTA_FLOAT);
 		//voice spacings must be unchanged
 		assertEquals(vs, res.get2());
 	}
-	
-	
+
 	/**
 	 * If there is not enough space left for the measure elements,
 	 * the voice spacings have to be moved to create enough space.
@@ -106,59 +102,51 @@ public class MeasureElementsSpacingStrategyTest
 	 * enough. All elements at or after beat 3 have to be moved 2 spaces
 	 * to the right.
 	 */
-	@Test public void testNeedAdditionalSpace()
-	{
+	@Test public void testNeedAdditionalSpace() {
 		Rest[] ve = ve();
-		PVector<VoiceSpacing> vs = pvec(
-			new VoiceSpacing(null, 1, pvec(se(ve[0], fr(1,2), 4), se(ve[1], fr(4), 11))),
-			new VoiceSpacing(null, 1, pvec(se(ve[2], fr(1), 5), se(ve[3], fr(13,2), 16))));
+		IList<VoiceSpacing> vs = ilist(
+			new VoiceSpacing(null, 1, ilist(se(ve[0], fr(1, 2), 4), se(ve[1], fr(4), 11))),
+			new VoiceSpacing(null, 1, ilist(se(ve[2], fr(1), 5), se(ve[3], fr(13, 2), 16))));
 		Clef innerClef = new Clef(ClefType.G);
-		BeatEList<Clef> innerClefs = new BeatEList<Clef>().plus(
-			beate(innerClef, fr(4)));
-		Tuple2<MeasureElementsSpacings, Vector<VoiceSpacing>> res =
-			new MeasureElementsSpacingsStrategy().compute(innerClefs, new BeatEList<Key>(), null,
-				false, vs, 0, sne(ve, innerClef), ls);
+		BeatEList<Clef> innerClefs = new BeatEList<Clef>();
+		innerClefs.add(beatE(innerClef, fr(4)));
+		Tuple2<MeasureElementsSpacings, IList<VoiceSpacing>> res = new MeasureElementsSpacingsStrategy()
+			.compute(innerClefs, new BeatEList<Key>(), null, false, vs, 0, sne(ve, innerClef), ls);
 		//voice spacings
 		assertEquals(2, res.get2().size());
-		assertEquals(pvec(se(ve[0], fr(1,2), 4), se(ve[1], fr(4), 13)), res.get2().get(0).getSpacingElements());
-		assertEquals(pvec(se(ve[2], fr(1), 5), se(ve[3], fr(13,2), 18)), res.get2().get(1).getSpacingElements());
+		assertEquals(ilist(se(ve[0], fr(1, 2), 4), se(ve[1], fr(4), 13)), res.get2().get(0)
+			.getSpacingElements());
+		assertEquals(ilist(se(ve[2], fr(1), 5), se(ve[3], fr(13, 2), 18)), res.get2().get(1)
+			.getSpacingElements());
 		//clef must be at offset 13 - padding - clefwidth/2
-		Vector<SpacingElement> mes = res.get1().elements;
+		List<SpacingElement> mes = res.get1().getElements();
 		assertEquals(1, mes.size());
-		assertEquals(fr(4), mes.getFirst().beat);
-		assertEquals(13 - paddingWidth - clefWidth/2, mes.getFirst().offset, Delta.DELTA_FLOAT);
+		assertEquals(fr(4), mes.get(0).beat);
+		assertEquals(13 - paddingWidth - clefWidth / 2, mes.get(0).offset, Delta.DELTA_FLOAT);
 	}
-	
-	
-	private Rest[] ve()
-	{
-		return new Rest[]{new Rest(fr(1)), new Rest(fr(1)), new Rest(fr(1)), new Rest(fr(1))};
+
+	private Rest[] ve() {
+		return new Rest[] { new Rest(fr(1)), new Rest(fr(1)), new Rest(fr(1)), new Rest(fr(1)) };
 	}
-	
-	
-	private SpacingElement se(VoiceElement ve, Fraction beat, float offset)
-	{
+
+	private SpacingElement se(VoiceElement ve, Fraction beat, float offset) {
 		return new SpacingElement(ve, beat, offset);
 	}
-	
-	
-	private NotationsCache sne(Rest[] rests, Clef clef)
-	{
-		NotationsCache ret = NotationsCache.create();
+
+	private NotationsCache sne(Rest[] rests, Clef clef) {
+		NotationsCache ret = new NotationsCache();
 		for (Rest rest : rests)
 			ret.add(new RestNotation(rest, new ElementWidth(0)));
 		ret.add(new ClefNotation(clef, new ElementWidth(clefWidth), 0, 1));
 		return ret;
 	}
-	
-	
-	private LayoutSettings ls()
-	{
-		PMap<Fraction, Float> dw = pmap();
-		dw = dw.plus(fr(1), 1f);
+
+	private LayoutSettings ls() {
+		HashMap<Fraction, Float> dw = map();
+		dw.put(fr(1), 1f);
 		ChordSpacings spacings = new ChordSpacings(dw);
-		return new LayoutSettings(ChordWidths.defaultValue, ChordWidths.defaultValue,
-			new Spacings(spacings, spacings, 1, 1, clefWidth, 0, paddingWidth), 1, 1, 0, 0);
+		return new LayoutSettings(ChordWidths.defaultValue, ChordWidths.defaultValue, new Spacings(
+			spacings, spacings, 1, 1, clefWidth, 0, paddingWidth), 1, 1, 0, 0);
 	}
 
 }
